// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputFileTemplate /> should render multiple values 1`] = `
<DocumentFragment>
  .c2 {
  margin: -.3125rem -.3125rem;
}

.c4 {
  margin: .3125rem .3125rem;
}

.c4 .c8 {
  font-size: .75rem;
  padding: .1875rem .375rem;
  padding-left: 0.1875rem;
}

.c4 .c6 {
  padding: 0 0.1875rem;
}

.c4 svg {
  height: .75rem;
  width: .75rem;
}

.c4 i {
  font-size: .75rem;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  border: solid 1px;
  border-right: 0;
  border-color: #0553AC;
  border-radius: .15rem;
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #0553AC;
  color: #fff;
  fill: #fff;
}

.c7:active {
  background: #054D9F;
  border-color: #054D9F;
}

.c9 {
  border: solid 1px;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  word-break: break-word;
  word-wrap: break-word;
}

.c5 .c8 {
  border-color: #0665d0;
  border-radius: .15rem;
}

.c5 .c8 {
  background: #0665d0;
  color: #fff;
  fill: #fff;
}

.c5 .c8 {
  border-left: 0;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 {
  font-size: 1rem;
  padding: .45rem .9rem;
}

.c1 {
  border: solid 1px;
  border-radius: .2rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  -webkit-transition: 200ms 0s ease-in-out;
  transition: 200ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  background: #fff;
  border-color: #dbdbdb;
  color: #323a46;
  position: relative;
}

.c1:active,
.c1:focus {
  outline: 0;
}

<div
    class="c0 c1"
    shape="rectangle"
  >
    <input />
    <div
      class="c2 c3"
    >
      <div
        class="c4 c5"
        shape="rectangle"
      >
        <div
          class="c6  c7"
          shape="rectangle"
        >
          <svg
            class=""
            viewBox="2 2 14 14"
          >
            <path
              d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
            />
          </svg>
        </div>
        <div
          class="c8 c9"
        >
          foo.jpg
        </div>
      </div>
      <div
        class="c4 c5"
        shape="rectangle"
      >
        <div
          class="c6  c7"
          shape="rectangle"
        >
          <svg
            class=""
            viewBox="2 2 14 14"
          >
            <path
              d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
            />
          </svg>
        </div>
        <div
          class="c8 c9"
        >
          bar.jpg
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<InputFileTemplate /> should render placeholder 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  padding: .45rem .9rem;
}

.c1 {
  border: solid 1px;
  border-radius: .2rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  -webkit-transition: 200ms 0s ease-in-out;
  transition: 200ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  background: #fff;
  border-color: #dbdbdb;
  color: #323a46;
  position: relative;
}

.c1:active,
.c1:focus {
  outline: 0;
}

<div
    class="c0 c1"
    shape="rectangle"
  >
    <input />
    <div
      class=""
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`<InputFileTemplate /> should render single value 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1rem;
  padding: .45rem .9rem;
}

.c1 {
  border: solid 1px;
  border-radius: .2rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  -webkit-transition: 200ms 0s ease-in-out;
  transition: 200ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  background: #fff;
  border-color: #dbdbdb;
  color: #323a46;
  position: relative;
}

.c1:active,
.c1:focus {
  outline: 0;
}

<div
    class="c0 c1"
    shape="rectangle"
  >
    <input />
    file.jpg
  </div>
</DocumentFragment>
`;
